--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "firebase": "^12.7.0",
+    "lucide-react": "^0.561.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
