--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "emoji-picker-react": "^4.16.1",
     "firebase": "^12.7.0",
     "lucide-react": "^0.561.0",
     "next": "14.2.3",
